deploy/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: pgadmin
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: pgadmin
spec:
  selector:
    app: pgadmin
  ports:
    - name: http
      port: 5050
      targetPort: http
      protocol: TCP
